--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.19.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -16,10 +17,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
+    "prisma": "5.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "17.5.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
